# freenet-microblogging

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: build.yml  check-contract-wasm.yml
contracts/follows/: Cargo.toml  freenet.toml  initial_state.json
contracts/follows/src/: lib.rs
contracts/likes/: Cargo.toml  freenet.toml  initial_state.json
contracts/likes/src/: lib.rs
contracts/posts/: Cargo.toml
contracts/posts/src/: lib.rs
delegates/identity/: Cargo.toml  freenet.toml
delegates/identity/src/: lib.rs
published-contract/: contract-id.txt  web_container_contract.wasm
test-contract/: web-container-keys.toml
tools/web-container-sign/: Cargo.toml
tools/web-container-sign/src/: main.rs
web/: freenet.toml  index.html  package.json  vite.config.ts
web/container/src/: lib.rs
web/src/: app.ts  branding.ts  delegate-api.ts  freenet-api.ts  identity.ts  index.ts  mock-data.ts  theme.ts  types.ts  utils.ts  vite-env.d.ts
web/src/components/: bottom-nav.ts  compose-box.ts  feed.ts  key-export-modal.ts  onboarding.ts  post-card.ts  profile.ts  right-panel.ts  sidebar.ts
web/src/scss/: _buttons.scss  _dark-mode.scss  _feed.scss  _layout.scss  _modal.scss  _reset.scss  _responsive.scss  _right-panel.scss  _sidebar.scss  _variables.scss  styles.scss
web/tests/: production-liveness.spec.ts
