[package]
name = "freenet-microblogging-likes"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
resolver = "2"
publish = false

[dependencies]
freenet-stdlib = { workspace = true, features = ["contract"] }
serde = "1"
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["freenet-main-contract"]
freenet-main-contract = []
