[package]
name = "freenet-microblogging-posts"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
resolver = "2"
publish = false

[dependencies]
byteorder = "1"
freenet-stdlib = { workspace = true, features = ["contract"] }
serde = "1"
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
serde = "1"
serde_json = "1"

[features]
default = ["freenet-main-contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]
