[package]
name = "freenet-microblogging-identity"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
resolver = "2"
publish = false

[dependencies]
freenet-stdlib = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["freenet-main-delegate"]
freenet-main-delegate = []
